Manufactoring/force-app/main/default/objects/mfg_Transport_Product__c/mfg_Transport_Product__c.object-meta.xml
<CustomObject>
    <label>Transport Product</label>
    <nameField>
        <label>Transport Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transport Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>