Manufactoring/force-app/main/default/objects/mfg_Transport_Product__c/fields/mfg_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>mfg_Product_Status__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Production</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>