Manufactoring/force-app/main/default/objects/mfg_Transport_Product__c/fields/mfg_Production_Order__c.field-meta.xml
<CustomField>
    <fullName>mfg_Production_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Order</label>
    <referenceTo>mfg_Production_Order__c</referenceTo>
    <relationshipLabel>Transport Products</relationshipLabel>
    <relationshipName>Transport_Products</relationshipName>
    <type>Lookup</type>
</CustomField>