Manufactoring/force-app/main/default/objects/mfg_Transport_Product__c/fields/mfg_Transport_And_Schedule__c.field-meta.xml
<CustomField>
    <fullName>mfg_Transport_And_Schedule__c</fullName>
    <label>Transport And Schedule</label>
    <referenceTo>mfg_Transport_And_Schedule__c</referenceTo>
    <relationshipLabel>Transport Products</relationshipLabel>
    <relationshipName>Transport_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>