Manufactoring/force-app/main/default/objects/mfg_Transport_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Transport_And_Schedule__c</columns>
    <columns>mfg_Product__c</columns>
    <columns>mfg_Product_Quantity__c</columns>
    <columns>mfg_Product_Status__c</columns>
    <columns>mfg_Production_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>